bugs fixed validator

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -50,12 +50,12 @@
     <table style="padding: 20px 0; margin: auto; width: 100%; max-width: 600px; background: #eaeced;" border="0" cellpadding="0" cellspacing="0">
         <tr>
             <td class="header__logo" style="padding: 0 0 5px 1px;"><a href="#"
-                    style="font-size: 18px; color: #606060; font-weight: 900; text-decoration: none;">CompanyName.com</a></td>
-            <td class="header__nav-item" style="text-align: right; width: 50px;"><a href="#" style="font-size: 13px; color: #696969; text-decoration: none;"
+                    style="font-size: 18px; color: #606060; font-weight: 900; text-decoration: none;" target="_blank">CompanyName.com</a></td>
+            <td class="header__nav-item" style="text-align: right; width: 50px;"><a href="#" style="font-size: 13px; color: #696969; text-decoration: none;" target="_blank"
                     onmouseover="this.style.color='#000000';" onmouseout="this.style.color='#696969';">Home</a></td>
-            <td class="header__nav-item" style="text-align: center; width: 50px;"><a href="#" style="font-size: 13px; color: #696969; text-decoration: none;"
+            <td class="header__nav-item" style="text-align: center; width: 50px;"><a href="#" style="font-size: 13px; color: #696969; text-decoration: none;" target="_blank"
                     onmouseover="this.style.color='#000000';" onmouseout="this.style.color='#696969';">Blog</a></td>
-            <td class="header__nav-item" style="width: 50px;"><a href="#" style="font-size: 13px; color: #696969; text-decoration: none;"
+            <td class="header__nav-item" style="width: 50px;"><a href="#" style="font-size: 13px; color: #696969; text-decoration: none;" target="_blank"
                     onmouseover="this.style.color='#000000';" onmouseout="this.style.color='#696969';">Contact</a></td>
         </tr>
     </table>
@@ -75,22 +75,22 @@
                     <table style="text-align: center;" border="0" cellpadding="0" cellspacing="0">
                         <tbody>
 
-                            <tr">
+                            <tr>
                                 <td style="padding: 40px 0 0 0;">
-                                    <span style="font-size: 34px; color: #000000">Newsletter Template</span>
+                                    <span style="font-size: 34px; color: #000000;">Newsletter Template</span>
                                 </td>
             </tr>
             <tr>
                 <td style="padding: 30px 65px 15px 65px;">
                     <span style="font-size: 16px; color: #888888;">At none neat am do over will. Made neat an on be gave show snug tore. Any delicate you how
-                        kindness horrible outlived servants. <a href="#" style="color: #4cb1ec;">Buy now</a> favour length all twenty denote.</span>
+                        kindness horrible outlived servants. <a href="#" style="color: #4cb1ec;" target="_blank">Buy now</a> favour length all twenty denote.</span>
                 </td>
             </tr>
 
             <tr>
                 <td style="padding: 15px 0 55px 0;">
                     <a href="#"
-                        style="padding: 10px 25px; background: #7bb84f; border-radius: 3px; font-size: 16px; color: #ffffff; text-decoration: none; display: inline-block;"
+                        style="padding: 10px 25px; background: #7bb84f; border-radius: 3px; font-size: 16px; color: #ffffff; text-decoration: none; display: inline-block;" target="_blank" 
                         onmouseover="this.style.backgroundColor='#4a6e31';" onmouseout="this.style.backgroundColor='#7bb84f';" target="_blank">LEARN MORE</a>
                 </td>
             </tr>
@@ -117,7 +117,7 @@
                     <table style="text-align: center;" border="0" cellpadding="0" cellspacing="0">
                         <tbody>
 
-                            <tr">
+                            <tr>
                                 <td style="padding: 40px 0 0 0;">
                                     <span style="font-size: 34px; color: #000000">Free book mock-up</span>
                                 </td>
@@ -125,7 +125,7 @@
             <tr>
                 <td style="padding: 30px 65px 15px 65px;">
                     <span style="font-size: 16px; color: #888888;">Strictly numerous outlived kindness whatever on we no on addition. Polite do object at passed
-                        it is. Way own uncommonly travelling now acceptance bed compliment solicitude. <a href="#" style="color: #4cb1ec;">Buy now</a> for ask
+                        it is. Way own uncommonly travelling now acceptance bed compliment solicitude. <a href="#" style="color: #4cb1ec;" target="_blank">Buy now</a> for ask
                         shade water manor think men begin.</span>
                 </td>
             </tr>
@@ -133,7 +133,7 @@
             <tr>
                 <td style="padding: 15px 0 55px 0;">
                     <a href="#"
-                        style="padding: 10px 25px; background: #f5ba1c; border-radius: 3px; font-size: 16px; color: #ffffff; text-decoration: none; display: inline-block;"
+                        style="padding: 10px 25px; background: #f5ba1c; border-radius: 3px; font-size: 16px; color: #ffffff; text-decoration: none; display: inline-block;" target="_blank"
                         onmouseover="this.style.backgroundColor='#ce9c17';" onmouseout="this.style.backgroundColor='#f5ba1c';" target="_blank">LEARN MORE</a>
                 </td>
             </tr>
@@ -360,11 +360,11 @@
     <table style="padding: 20px 0; margin: auto; width: 100%; max-width: 600px; background: #eaeced;" border="0" cellpadding="0" cellspacing="0">
         <tr>
             <td style="padding: 0 0 5px 1px;"><span style="font-size: 13px; color: #606060;">Your company 2015. All Rights Reserved. <a href="#"
-                        style="color: #4cb1ec;">Unsubscribe.</a></span></td>
-            <td style="text-align: center; width: 30px;"><a href="#"><img src="img/contacts/fb.svg" alt="fb" width="18px"></a></td>
-            <td style="text-align: center; width: 30px;"><a href="#"><img src="img/contacts/twitter.svg" alt="twitter" width="18px"></a></td>
-            <td style="text-align: center; width: 30px;"><a href="#"><img src="img/contacts/gmail.svg" alt="gmail" width="18px"></a></td>
-            <td style="width: 20px;"><a href="#"><img src="img/contacts/in.svg" alt="in" width="18px"></a></td>
+                        style="color: #4cb1ec;" target="_blank">Unsubscribe.</a></span></td>
+            <td style="text-align: center; width: 30px;"><a href="#"><img src="img/contacts/fb.png" alt="fb" width="18px" target="_blank"></a></td>
+            <td style="text-align: center; width: 30px;"><a href="#"><img src="img/contacts/twitter.png" alt="twitter" width="18px" target="_blank"></a></td>
+            <td style="text-align: center; width: 30px;"><a href="#"><img src="img/contacts/gmail.png" alt="gmail" width="18px" target="_blank"></a></td>
+            <td style="width: 20px;"><a href="#"><img src="img/contacts/in.png" alt="in" width="18px" target="_blank"></a></td>
         </tr>
     </table>
 
